# storytelling_ai

./: .gitignore  README.md  resume.md
backend/: README.md  docker-compose.yml
backend/doc/: decisions.md  ui_design_brief.md
backend/main/: .gitignore  .langgraph-cache.sqlite-shm  .langgraph-cache.sqlite-wal  ARCHITECTURE.md  Dockerfile  README.md  background.py  config.py  langgraph.json  pipeline_runner.py  pyproject.toml  requirements.txt  story_events.py  worker.dockerfile
backend/main/agents/: assembler.py  cover_artist.py  generator.py  planner.py  saver.py
backend/main/alembic/: env.py
backend/main/alembic/versions/: 20260501_0001_add_cover_image_column.py
backend/main/api/: dependencies.py  main.py  schemas.py
backend/main/graph/: pipeline.py
backend/main/repositories/: story_repo.py
backend/main/services/: story_service.py
backend/main/state/: __init__.py  schema.py
backend/main/storage/: __init__.py  db.py  media.py
backend/main/tasks/: celery_app.py
backend/main/tests/: conftest.py
backend/main/tests/integration/: test_api.py
backend/main/tests/unit/: test_cover_artist.py  test_graph_pipeline.py  test_hitl_graph.py  test_pipeline_runner.py  test_story_events.py  test_story_service.py
backend/tts/: .dockerignore  Dockerfile  __init__.py  agent.py  dependencies.py  main.py  models.py  parser.py  requirements.txt  storage.py
doc/: agent_flow.md  architecture.md  frontend_integration.md
frontend/: .firebaserc  index.html  package-lock.json  package.json  tailwind.config.js
frontend/.firebase/: hosting.ZGlzdA.cache
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  NowPlayingBar.tsx  Sidebar.tsx  TopNav.tsx
frontend/src/components/auth/: SignInOrUpFlow.tsx
frontend/src/components/ui/: ArchitectLog.tsx  AsyncStatePanel.tsx  ChapterCard.tsx  GenerationProgress.tsx  GlassPanel.tsx  LuminousButton.tsx  NotificationSystem.tsx  PlaybackBar.tsx  ProgressCircle.tsx  ProseCanvas.tsx  SiriOrb.tsx  StoryGenerationLoader.tsx  StoryStatusBadge.tsx  Waveform.tsx
frontend/src/constants/: storyStatus.ts
frontend/src/context/: TTSContext.tsx
frontend/src/hooks/: useSSE.ts  useTTS.ts
frontend/src/services/: api.ts
frontend/src/store/: index.ts
frontend/src/store/slices/: favoritesSlice.ts  storySlice.ts
frontend/src/utils/: cn.ts
frontend/src/views/: NarratorStudio.tsx  TheBlueprint.tsx  TheForge.tsx  TheLibrary.tsx
