[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "storytelling-ai"
version = "0.1.0"
description = "Production-ready AI storytelling agent — FastAPI + LangGraph + Celery"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # LangChain / LangGraph
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "google-genai>=1.0.0",

    # Async task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Object storage
    "boto3>=1.34.0",

    # HTTP client (general use)
    "httpx>=0.27.0",

    # Settings & env
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",

    # Logging
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",          # TestClient
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
